# zschema

./: .gitignore  .travis.yml  README.md  README.rst  compounds.py  keys.py  leaves.py  pyproject.toml  setup.py  test.py
.github/workflows/: ci.yml
zschema/: __init__.py  __main__.py  cli.py  compounds.py  example.py  keys.py  leaves.py  registry.py  test_zschema.py  tests.py
zschema/fixtures/: ipv4-ssh-record.json
